website/websites/u64q/code/fibonacci.1.pyston.log

 Sun, 06 Feb 2022 21:18:13 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston", line 8
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
